# compact-cfg

./: CMakeLists.txt  README.md
examples/: basic_usage.cpp  example_system.cpp
src/: compactcfg.cpp  compactcfg.h  main.cpp
src/handlers/: ccfg_vector.h
src/hash/: fnv1a32.h  fnv1a64.h
